arc: Fix regression in handling ARC shelf item.

This fix regressions caused by recent refactoring. First regression is
in case multiple shelf items for the same ARC app, clicking on shelf
item always activates last opened window. It is expected that in this
case last active window of that app becomes active. Second one,
selecting which item to activate from menu does not actually activate
selected item

BUG=703895
TEST=Manually, unit_tests extended.

Review-Url: https://codereview.chromium.org/2763893004
Cr-Commit-Position: refs/heads/master@{#458638}

Former-commit-id: a19209825989de7d6b620aea95dd0f95b5c3c03f